moved around blade improvements

--- a/src/main/resources/assets/tetra/lang/en_us.json
+++ b/src/main/resources/assets/tetra/lang/en_us.json
@@ -499,30 +499,38 @@
   "basic_blade/knightmetal": "Knightmetal blade",
   "basic_blade/knightmetal.prefix": "Knightmetal",
 
-  "basic_blade/serrated.name": "Serrated blade",
-  "basic_blade/serrated.prefix": "Serrated",
-  "basic_blade/serrated.description": "Attacks may inflict bleed",
+  "blade/serrated.name": "Serrated blade",
+  "blade/serrated.prefix": "Serrated",
+  "blade/serrated.description": "Attacks may inflict bleed",
+
+  "blade/hooked.name": "Hooked blade",
+  "blade/hooked.prefix": "Hooked",
+  "blade/hooked.description": "Hitting enemies from behind cause critical damage",
+
+  "blade/tempered.name": "Tempered point",
+  "blade/tempered.prefix": "Tempered",
+  "blade/tempered.description": "Attacks partially ignore armor",
 
   "serrated_blade_schema.name": "Serrate",
   "serrated_blade_schema.description": "Serrates the blade, providing a saw-tooth edged blade. Has a 30%% chance to cause the target to bleed for 4 damage over 2 seconds. Not effective against undead.",
-  "blade_hone_serrated_2_schema.name": "Hone: Serrated II",
-  "blade_hone_serrated_2_schema.description": "Hone the serrated improvement, increases the damage dealt to 8.",
-  "blade_hone_serrated_3_schema.name": "Hone: Serrated III",
-  "blade_hone_serrated_3_schema.description": "Further hone the serrated improvement, increases the damage dealt to 16.",
+  "serrated_blade_2_schema.name": "Hone: Serrated II",
+  "serrated_blade_2_schema.description": "Hone the serrated improvement, increases the damage dealt to 8.",
+  "serrated_blade_3_schema.name": "Hone: Serrated III",
+  "serrated_blade_3_schema.description": "Further hone the serrated improvement, increases the damage dealt to 16.",
 
   "tempered_blade_schema.name": "Temper",
   "tempered_blade_schema.description": "Temper the point of the blade, greatly increasing it's hardness. Causes some of the damage dealt to ignore armor.",
-  "blade_hone_tempered_2_schema.name": "Hone: Tempered II",
-  "blade_hone_tempered_2_schema.description": "Hone the tempered improvement, increases the amount of damage that penetrates armor to 3.",
-  "blade_hone_tempered_3_schema.name": "Hone: Tempered III",
-  "blade_hone_tempered_3_schema.description": "Further hone the serrated improvement, increases the amount of damage that penetrates armor to 5.",
+  "tempered_blade_2_schema.name": "Hone: Tempered II",
+  "tempered_blade_2_schema.description": "Hone the tempered improvement, increases the amount of damage that penetrates armor to 3.",
+  "tempered_blade_3_schema.name": "Hone: Tempered III",
+  "tempered_blade_3_schema.description": "Further hone the serrated improvement, increases the amount of damage that penetrates armor to 5.",
 
   "hooked_blade_schema.name": "Carve hook",
   "hooked_blade_schema.description": "Carve a hook into the back side of the blade, providing additional damage when hitting unsuspecting enemies. Cause critical strikes when attacking enemies from behind.",
-  "blade_hone_hooked_2_schema.name": "Hone: Hooked II",
-  "blade_hone_hooked_2_schema.description": "Hone the hooked improvement, increases the bonus damage dealt when hitting enemies from behind to 75%%.",
-  "blade_hone_hooked_3_schema.name": "Hone: Hooked III",
-  "blade_hone_hooked_3_schema.description": "Further hone the hooked improvement, increases the bonus damage dealt when hitting enemies from behind to 125%%.",
+  "hooked_blade_2_schema.name": "Hone: Hooked II",
+  "hooked_blade_2_schema.description": "Hone the hooked improvement, increases the bonus damage dealt when hitting enemies from behind to 75%%.",
+  "hooked_blade_3_schema.name": "Hone: Hooked III",
+  "hooked_blade_3_schema.description": "Further hone the hooked improvement, increases the bonus damage dealt when hitting enemies from behind to 125%%.",
 
   "basic_hilt_schema.name": "Simple hilt",
   "basic_hilt_schema.description": "Replaces the current hilt with a new one crafted from the provided material.",
@@ -922,18 +930,6 @@
   "short_blade/knightmetal": "Knightmetal shortblade",
   "short_blade/knightmetal.prefix": "Knightmetal",
   "short_blade/knightmetal.name": "Dagger",
-
-  "short_blade/hooked.name": "Hooked blade",
-  "short_blade/hooked.prefix": "Hooked",
-  "short_blade/hooked.description": "Hitting enemies from behind cause critical damage",
-
-  "short_blade/tempered.name": "Tempered point",
-  "short_blade/tempered.prefix": "Tempered",
-  "short_blade/tempered.description": "Attacks partially ignore armor",
-
-  "short_blade/serrated.name": "Serrated blade",
-  "short_blade/serrated.prefix": "Serrated",
-  "short_blade/serrated.description": "Attacks may inflict bleed",
 
   "heavy_blade_schema.name": "Heavy blade",
   "heavy_blade_schema.description": "Replace the current sword blade with a large and hefty blade. Sacrifices attack speed for increased damage. Has a powerful sweeping attack on fully charged attacks.",
