added support for ensorcellation

--- a/src/main/resources/assets/tetra/lang/en_us.json
+++ b/src/main/resources/assets/tetra/lang/en_us.json
@@ -375,8 +375,74 @@
   "destabilized/apotheosis_natures_blessing.name": "Destabilized: Nature's Blessing",
   "destabilized/apotheosis_natures_blessing.description": "Reduces the effect of the Nature's Blessing enchantment",
 
-  "cleanse_schema.name": "Cleanse",
-  "cleanse_schema.description": "Cleanse negative effects caused by magic instability.\n\nExperience cost is increased based on exceeded magic capacity and the amount of instability effects.",
+
+  "enchantment/ensorcellation_cavalier.name": "Cavalier",
+  "enchantment/ensorcellation_cavalier.description": "Increases damage when riding something.",
+  "destabilized/ensorcellation_cavalier.name": "Cavalier",
+  "destabilized/ensorcellation_cavalier.description": "Reduces the effect of the  enchantment",
+  "enchantment/ensorcellation_curse_fool.name": "Curse of Foolishness",
+  "enchantment/ensorcellation_curse_fool.description": "Prevents experience gain when using the item.",
+  "enchantment/ensorcellation_curse_mercy.name": "Curse of Mercy",
+  "enchantment/ensorcellation_curse_mercy.description": "Prevents a weapon from dealing a lethal blow.",
+  "enchantment/ensorcellation_damage_ender.name": "Ender Disruption",
+  "enchantment/ensorcellation_damage_ender.description": "Increases damage dealt to Ender mobs and inhibits teleportation.",
+  "destabilized/ensorcellation_damage_ender.name": "Destabilized: Ender Disruption",
+  "destabilized/ensorcellation_damage_ender.description": "Reduces the effect of the Ender Disruption enchantment",
+  "enchantment/ensorcellation_damage_illager.name": "Vigilante",
+  "enchantment/ensorcellation_damage_illager.description": "Increases damage dealt to Illager mobs.",
+  "destabilized/ensorcellation_damage_illager.name": "Destabilized: Vigilante",
+  "destabilized/ensorcellation_damage_illager.description": "Reduces the effect of the Vigilante enchantment",
+  "enchantment/ensorcellation_damage_villager.name": "Outlaw",
+  "enchantment/ensorcellation_damage_villager.description": "Increases damage dealt to Villager mobs.",
+  "destabilized/ensorcellation_damage_villager.name": "Destabilized: Outlaw",
+  "destabilized/ensorcellation_damage_villager.description": "Reduces the effect of the Outlaw enchantment",
+  "enchantment/ensorcellation_excavating.name": "Excavating",
+  "enchantment/ensorcellation_excavating.description": "Harvests additional blocks in a radius.",
+  "destabilized/ensorcellation_excavating.name": "Destabilized: Excavating",
+  "destabilized/ensorcellation_excavating.description": "Reduces the effect of the Excavating enchantment",
+  "enchantment/ensorcellation_exp_boost.name": "Insight",
+  "enchantment/ensorcellation_exp_boost.description": "Increases experience gain when using the item.",
+  "destabilized/ensorcellation_exp_boost.name": "Destabilized: Insight",
+  "destabilized/ensorcellation_exp_boost.description": "Reduces the effect of the Insight enchantment",
+  "enchantment/ensorcellation_frost_aspect.name": "Frost Aspect",
+  "enchantment/ensorcellation_frost_aspect.description": "Slows and weakens the target.",
+  "destabilized/ensorcellation_frost_aspect.name": "Destabilized: Frost Aspect",
+  "destabilized/ensorcellation_frost_aspect.description": "Reduces the effect of the Frost Aspect enchantment",
+  "enchantment/ensorcellation_furrowing.name": "Furrowing",
+  "enchantment/ensorcellation_furrowing.description": "Tills additional blocks in a line.",
+  "destabilized/ensorcellation_furrowing.name": "Destabilized: Furrowing",
+  "destabilized/ensorcellation_furrowing.description": "Reduces the effect of the Furrowing enchantment",
+  "enchantment/ensorcellation_leech.name": "Leech",
+  "enchantment/ensorcellation_leech.description": "Restores health when a mob is killed.",
+  "destabilized/ensorcellation_leech.name": "Destabilized: Leech",
+  "destabilized/ensorcellation_leech.description": "Reduces the effect of the Leech enchantment",
+  "enchantment/ensorcellation_magic_edge.name": "Magic Edge",
+  "enchantment/ensorcellation_magic_edge.description": "Slightly increases damage dealt and converts it to magic.",
+  "destabilized/ensorcellation_magic_edge.name": "Destabilized: Magic Edge",
+  "destabilized/ensorcellation_magic_edge.description": "Reduces the effect of the Magic Edge enchantment",
+  "enchantment/ensorcellation_reach.name": "Reach",
+  "enchantment/ensorcellation_reach.description": "Increases the distance that the wielder can interact with blocks.",
+  "destabilized/ensorcellation_reach.name": "Destabilized: Reach",
+  "destabilized/ensorcellation_reach.description": "Reduces the effect of the Reach enchantment",
+  "enchantment/ensorcellation_smashing.name": "Smashing",
+  "enchantment/ensorcellation_smashing.description": "Harvested ores will be smashed to pieces, improving yield.",
+  "enchantment/ensorcellation_smelting.name": "Smelting",
+  "enchantment/ensorcellation_smelting.description": "Harvested blocks will automatically be smelted, as if by a Furnace.",
+  "enchantment/ensorcellation_soulbound.name": "Soulbound",
+  "enchantment/ensorcellation_soulbound.description": "The item will remain with the owner after an untimely demise.",
+  "enchantment/ensorcellation_tilling.name": "Tilling",
+  "enchantment/ensorcellation_tilling.description": "Tills additional blocks in a radius.",
+  "destabilized/ensorcellation_tilling.name": "Destabilized: Tilling",
+  "destabilized/ensorcellation_tilling.description": "Reduces the effect of the Tilling enchantment",
+  "enchantment/ensorcellation_vorpal.name": "Vorpal",
+  "enchantment/ensorcellation_vorpal.description": "Randomly performs powerful attacks and decapitations.",
+  "destabilized/ensorcellation_vorpal.name": "Destabilized: Vorpal",
+  "destabilized/ensorcellation_vorpal.description": "Reduces the effect of the Vorpal enchantment",
+  "enchantment/ensorcellation_weeding.name": "Weeding",
+  "enchantment/ensorcellation_weeding.description": "Clears plants while tilling blocks.",
+
+  "tetra/schema/cleanse_schema.name": "Cleanse",
+  "tetra/schema/cleanse_schema.description": "Cleanse negative effects caused by magic instability.\n\nExperience cost is increased based on exceeded magic capacity and the amount of instability effects.",
 
   "tetra/schema/sword/shared_blade/hone_damage_1.name": "Hone: Damage I",
   "tetra/schema/sword/shared_blade/hone_damage_1.description": "Hone the module to increase the damage dealt by 0.5.",
